--- a/.github/workflows/tail1.yml
+++ b/.github/workflows/tail1.yml
@@ -13,7 +13,13 @@ jobs:
     steps:
       - name: chuẩn bị phần mềm
         run: | 
-         sudo apt install qemu-kvm cpulimit wget -y | sudo apt update -y && sudo apt install ngrok -y   
+         sudo apt update -y
+          sudo apt install curl wget qemu-kvm cpulimit -y
+          wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz
+          tar -xf ngrok-v3-stable-linux-amd64.tgz
+          chmod +x ngrok
+          ./ngrok config add-authtoken "${{ github.event.inputs.ngrok }}"
+          nohup ./ngrok tcp --region ap 5900 &>/dev/null &   
       - name: cài win và khởi chạy
         run: |
           sudo chmod 666 /dev/kvm
