Update and rename tail16gbram.yml to tail12gbram.yml

--- a/.github/workflows/tail12gbram.yml
+++ b/.github/workflows/tail12gbram.yml
@@ -1,4 +1,5 @@
-name: 4core/16gbram/60gbssd (nhanh hết time) | Tailscale
+name: 4core/12
+gbram/60gbssd (nhanh hết time) | Tailscale
 
 on: 
   workflow_dispatch:
